--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,5 +20,5 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/logo.png
-    - assets/logo.svg
+    - assets/img/logo.png
+    - assets/img/logo.svg
