--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -7,6 +7,9 @@ buildscript {
 
 plugins {
     id "com.android.application"
+    // START: FlutterFire Configuration
+    id 'com.google.gms.google-services'
+    // END: FlutterFire Configuration
     id "kotlin-android"  // Este es el único plugin necesario para Kotlin
     id "dev.flutter.flutter-gradle-plugin"
 }
